[package]
name = "quest"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nostr-sdk = { version="0.30.0", features = ["all-nips"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_yaml = "0.9.25"
chrono = { version = "0.4.23", features = ["serde"] }
time = "0.3.20"
serde_json = "1.0.94"
rusqlite = "0.31.0"
dotenv = "0.15.0"
regex = "1.7.1"
thiserror = "1.0.39"
openai-api-rs = "4.0.5"
rand = "0.8"